--- a/fnks_web/latestnews.html
+++ b/fnks_web/latestnews.html
@@ -11,7 +11,7 @@
 		<title>非纳克斯官网</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
 		<link rel="stylesheet"  type="text/css" href="css/header.css"/>
-		<link rel="stylesheet" type="text/css" href="css/latest.css"/>
+		<link rel="stylesheet" type="text/css" href="css/latestnews.css"/>
 	</head>
 	<body>
 		<div class="header-nav">
